--- a/index.css
+++ b/index.css
@@ -1,1 +1,331 @@
-//Initial commit
+* {
+  box-sizing: border-box;
+  margin: 0;
+}
+
+.outer {
+  width: 100%;
+}
+.inner {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+}
+
+
+/* Header content stykes  */
+.header {
+  width: 100%;
+  height: 64px;
+}
+.container16 {
+  margin: 16px 24px;
+}
+.header-content {
+  display: flex;
+  justify-content: space-between;
+  flex-direction: row;
+}
+.header-left {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+.logo {
+  height: 32px;
+  width: 24px;
+}
+.title {
+  font-size: 20px;
+  margin: 0;
+  padding: .5rem;
+  font-family: Helvetica;
+}
+.title-bold {
+  font-weight: bold;
+}
+.header-right {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: Helvetica;
+}
+.nav-item {
+  margin-left: 16px;
+  text-align: center;
+}
+.icon {
+  display: none;
+  color:#000000;
+}
+/*SECTION 1*/
+.hero-1 {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  flex-direction: row;
+  background-color: #e2e2e2;
+  padding: 32px 24px;
+}
+.content-1 {
+  height: 436px;
+  display:  flex;
+  flex-direction: row;
+
+}
+.container24 {
+ margin: 32px 24px;
+ display: flex;
+ justify-content: center;
+ flex-direction: column;
+ align-items: center;
+}
+.image-1 {
+  width: 60%;
+  height: 436px;
+}
+.hero-text {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+}
+.hero-head {
+  font-size: 40px;
+  line-height: 44px;
+  font-family: Helvetica;
+  font-weight: bold;
+  color: #2F4F4F;
+}
+.hero-sub {
+  font-size: 24px;
+  line-height: 28px;
+  font-family: Helvetica;
+  color: #2f4f4f;
+  margin: 16px 0;
+}
+button {
+  background-color: #2f4f4f;
+  width: 100%;
+  padding: 8px 0;
+  font-size: 1.2rem;
+  color: #f7f7f7;
+  border: none;
+  font-family: Helvetica;
+}
+/*SECTION 1 END*/
+.hero-2 {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  background-color: #ffffff;
+}
+.content-2 {
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+}
+.left-2 {
+  width: 60%;
+  margin: 32px 24px;
+}
+.image-2 {
+  width: 100%;
+  height: 436px;
+  margin-bottom: 32px;
+  margin-right: 16px;
+}
+.hero-text-2 {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+}
+.hero-head-2 {
+  font-size: 40px;
+  margin: 0;
+  font-family: Helvetica;
+  font-weight: bold;
+  color: #2F4F4F;
+}
+.hero-sub-2 {
+  font-size: 16px;
+  line-height: 18px;
+  font-family: Helvetica;
+  color: #2f4f4f;
+  margin: 24px 0;
+  width: 90%;
+}
+.credit {
+  font-size: 12px;
+  line-height: 18px;
+  font-family: Helvetica;
+  color: #2f4f4f;
+  margin-bottom: 32px;
+}
+.right-2 {
+  width: 40%;
+  padding-top: 16px;
+  border-left: 2px solid #e2e2e2;
+}
+.tile {
+  display: flex;
+  flex-direction: row;
+  padding: 16px;
+  border-bottom: 2px solid #e2e2e2;
+}
+.tile-mobile {
+  display: none;
+}
+.tile-image {
+  width: 35%;
+  height: auto;
+}
+.tile-right {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding: 16px;
+}
+.tile-head {
+  font-size: 1.5rem;
+  font-family: Helvetica;
+  font-weight: bold;
+  margin: 8px 0;
+  color: #2f4f4f;
+}
+.tile-sub {
+  font-size: 1rem;
+  font-family: Helvetica;
+  margin-bottom: 8px;
+  color: #2f4f4f;
+}
+a {
+  text-decoration: none;
+  font-family: Helvetica;
+  font-size: 1rem;
+  color:#0080ff;
+}
+.tile-3 {
+  background-color: #e2e2e2;
+}
+/*SECTION 2 END */
+/*SECTION 3 START*/
+.hero-3 {
+display: flex;
+justify-content: center;
+align-items: center;
+padding: 32px 56px;
+background-color: #e2e2e2;
+width: 100%;
+}
+.content-3 {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.card-container {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  width: 90%;
+  margin-top: 32px;
+}
+.mobile-card {
+  display: none;
+}
+.mobile-card-title {
+  display: none;
+}
+.card {
+  display: flex;
+  flex-direction: column;
+  width: 30%;
+  margin: 0 16px 32px;
+  border: 1px solid #cccccc;
+  -webkit-box-shadow: 0px 3px 10px 2px rgba(204,204,204,1);
+-moz-box-shadow: 0px 3px 10px 2px rgba(204,204,204,1);
+box-shadow: 0px 3px 10px 2px rgba(204,204,204,1);;
+}
+.card-image {
+  width: auto;
+  display: block;
+  background-color: #ffffff;
+}
+.card-text {
+  background-color: #ffffff;
+  padding: 16px 16px 24px;
+}
+.card-head {
+  font-size: 1.4rem;
+  font-family: Helvetica;
+  font-weight: bold;
+  color: #2f4f4f;
+}
+.card-sub {
+  font-size: .8rem;
+  font-family: Helvetica;
+  margin: 8px 0;
+  color: #2f4f4f;
+}
+.card-description {
+  font-size: .8rem;
+  font-family: Helvetica;
+  margin: 8px 0;
+  color: #2f4f4f;
+}
+/*SECTION 2 END*/
+/*SECTION 3 START*/
+.hero-head-3 {
+  font-size: 40px;
+  line-height: 44px;
+  font-family: Helvetica;
+  font-weight: bold;
+  color: #2F4F4F;
+  padding: 32px 0;
+  text-align: center;
+}
+.right {
+  width: 40%;
+  padding-top: 8px;
+}
+.nobord {
+  border: none;
+}
+.left {
+  width: 60%;
+  margin: 8px 24px;
+}
+.video {
+  width: 100%;
+
+  height: auto;
+  max-height: 600;
+  margin-bottom: 32px;
+  margin-right: 16px;
+}
+.footer {
+  width: 100%;
+  border-top: 2px solid #e2e2e2;
+  padding-bottom: 24px;
+}
+.container {
+  padding: 16px 24px;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  flex-direction: row;
+}
+.right-foot {
+  display: flex;
+  flex-direction: row;
+}
+.foot-text {
+  font-size: .8rem;
+  font-family: Helvetica;
+  color: #2f4f4f;
+}
+.terms {
+  padding-right: 8px;
+}
